tooling/nargo_cli/tests/snapshots/compile_failure/duplicate_declaration/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: unused function hello
  ┌─ src/main.nr:2:4
  │
2 │ fn hello(x: Field) -> Field {
  │    ----- unused function
  │

error: Duplicate definitions of function with name hello found
  ┌─ src/main.nr:2:4
  │
2 │ fn hello(x: Field) -> Field {
  │    ----- First function found here
  ·
6 │ fn hello(x: Field) -> Field {
  │    ----- Second function found here
  │

Aborting due to 1 previous error
