tooling/nargo_cli/tests/snapshots/compile_failure/duplicate_declaration/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unused function hello
  ┌─ src/main.nr:2:4
  │
2 │ fn hello(x: Field) -> Field {
  │    ----- unused function
  │

error: Duplicate definitions of function with name hello found
  ┌─ src/main.nr:2:4
  │
2 │ fn hello(x: Field) -> Field {
  │    ----- First definition found here
  ·
6 │ fn hello(x: Field) -> Field {
  │    ----- Second definition found here
  │

Aborting due to 1 previous error
